tests/rawindex.test/t12.req.out
(csc2='schema{int i int j} keys{"I" = i}')
(csc2='schema{int i int j} keys{"I" = i {where j > 10}}')
(csc2='schema{int i int j} keys{"I" = i {where j > "10"} "J" = j}')
(csc2='schema{int i int j} keys{"I" = i {where j > "10"} "J" = j {where i > 10}}')
(csc2='schema{int i int j} keys{"I" = (int)"i+j" {where i+j > 10} "J" = (int)"i-j" {where i > j}}')
(csc2='schema{int i cstring j[16]} keys{"I" = (int)"i" {where j > "10" and j < '20'} "J" = (int)"length(j)" {where j > '}'}}')
(csc2='schema{int i cstring j[16]} keys{"I" = (int)"i" {where j > "{{" and j < '}}'} "J" = (int)"length(j)" {where j > '{{{{}}}}}{{{}}}{}{}{}'}}')
(csc2='schema{int i cstring j[16]} keys{"I" = (int)"i" {where j > '{{" and j < "}}'} "J" = (int)"length(j)" {where j > "{{{{}}}{}}}{}{}{}"}}')
(csc2='schema{int i cstring j[16]} keys{"I" = (int)"i" {where j > "{{' and j < '}}"} "J" = (int)"length(j)" {where j > '{{{{}}}}{}{}'}}')
(csc2='schema{int i cstring j[16]} keys{"I" = (int)"i" {where j > " and j < '}}'"} "J" = (int)"length(j)" {where j > "}{}{}}}{{}}"}}')
(csc2='schema{int i cstring j[16]} keys{"I" = (int)"i" {where j > "''" and j < ''''''}}')
(csc2='schema{int i cstring j[16]} keys{"I" = (int)"i" {where j < '''}'}}')
(csc2='schema{int i cstring j[16]} keys{"I" = (int)"i" {where j < "'}"}}')
[create table t12 {schema{int i cstring j[16]} keys{"I" = (int)"i" {where j < ''}'}}}] failed with rc 304 OP #3 BLOCK2_SEQV2(824): ERROR at line   0: syntax error: '
